# Project-CVLanjut

./: .gitignore  README.md  contex.md  handover.md  pyproject.toml  reference.bib  requirements.txt  results.md  run_app.sh  run_evaluate_research_metrics.sh  run_pretrained_yoloworld_bdd10k.sh  run_results_eval.sh  run_train_yolo_bdd10k.sh  run_train_yolo_bdd10k_serial.sh  run_train_yoloworld_bdd10k.sh  run_train_yoloworld_bdd10k_serial.sh  run_train_yoloworld_retention.sh
app/: README.md  app.py
data/bdd10k/: bdd10k.yaml
file-tex/: main.aux  main.bbl  main.blg  main.fdb_latexmk  main.fls  main.tex  refeences.bib  references.bib
notebooks/: train_yoloworld_bdd10k.ipynb
scripts/: __init__.py  check_bdd10k_dataset.py  convert_bdd10k_to_yolo.py  evaluate_research_metrics.py  research_evaluation.py  run_pretrained_yoloworld_bdd10k.py  run_results_eval.py  run_train_yolo_bdd10k.py  run_train_yoloworld_bdd10k.py  visualize_research_eval.py  yolo_bdd10k_pipeline.py  yoloworld_bdd10k_pipeline.py  yoloworld_bdd10k_retention_pipeline.py
